# snapjax

./: .gitignore  README.md  algos.py  benchmark.py  debug.py  main.py  pta_cell.py  pyproject.toml  pyrightconfig.json  rnn.py  sp_jacrev.py  sparse.py  test.py
snapjax/: algos.py  annealing.py  benchmark.py  bptt.py  display-gpu-info.sh  exact.py  losses.py  mlops.py  optimized.py  sp_jacrev.py  utils.py
snapjax/cells/: base.py  continous_rnn.py  gru.py  initializers.py  lru.py  neuro_rnn.py  pta_cell.py  readout.py  residual.py  rnn.py  stacked.py  utils.py
snapjax/dataloaders/: base.py  copy_task.py  exp_sum.py  neuroscience.py  ssm.py  teacher.py
snapjax/rtrl/: base.py
snapjax/spp_primitives/: primitives.py
snapjax/spp_primitives/gpu/: CMakeLists.txt  kernel.cc.cu  kernel.h  sp_ops.cc
snapjax/tests/: batch_test.py  benchmark.py  bptt_test.py  jacrev_test.py  matrix_jacobian_test.py  online_updates_test.py  snap_test.py  snap_trick_test.py  sparse_weights_test.py  test.py  utils.py
spp_primitives/: primitives.py
